--- a/Wikimedia-Kafka-Consumer/src/main/resources/application.properties
+++ b/Wikimedia-Kafka-Consumer/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.kafka.consumer.auto-offset-reset:earliest
 spring.kafka.consumer.key-deserializer:org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer:org.apache.kafka.common.serialization.StringDeserializer
 
+spring.kafka.topic.name=wikimedia_recentchange
 
 spring.datasource.url= jdbc:mysql://localhost:3306/wikimedia
 spring.datasource.username=root
