--- a/Wikimedia-Producer/src/main/resources/application.properties
+++ b/Wikimedia-Producer/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=Wikimedia-Producer
 spring.kafka.producer.bootstrap-servers:localhost:9092
 spring.kafka.producer.key-serializer:org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer:org.apache.kafka.common.serialization.StringSerializer
+
+spring.kafka.topic.name=wikimedia_recentchange
